# kentraBOT

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Lego_BLE.code-workspace  README.md  kentraBOT.code-workspace  main.py  package-lock.json  package.json  plan.md  pyproject.toml
app/components/: status_panel.py
app/pages/: manual_control.py  system_logs.py  system_status.py
app/states/: telemetry_state.py  theme_state.py
doc/: conf.py  dashboard.backend.rst  dashboard.rst  dashboard.templates.rst  index.rst  rxconfig.rst  src.rst  test_example.rst
doc/_build/doctrees/: app.doctree  app.models.doctree  app.tools.doctree  dashboard.backend.doctree  dashboard.components.doctree  dashboard.doctree  dashboard.pages.doctree  dashboard.templates.doctree  dashboard.views.doctree  environment.pickle  index.doctree  main.doctree  modules.doctree  rxconfig.doctree  src.doctree  test_example.doctree
doc/_build/html/: .buildinfo  app.html  app.models.html  app.tools.html  dashboard.backend.html  dashboard.components.html  dashboard.html  dashboard.pages.html  dashboard.templates.html  dashboard.views.html  genindex.html  index.html  main.html  modules.html  objects.inv  py-modindex.html  rxconfig.html  search.html  searchindex.js  src.html  (+1 more)
playwright-report/: index.html
services/ble_tool/: pyproject.toml
src/: README.md  control.py  main.py  scan.py  test-ble.py
src/tests/: bruteforce.py  drive_base.py  ghost_proto.py  mould_king_test.py  protocol_test.py  rc_tutorial.py  testing_commands.py
temp/: brick.py  protocol_scanner.py  scan.py
tests/: test-click.ts
(+29 files in other folders)
