[project]
name = "kentraBOT"
version = "0.1.0"
description = "Library to control fake chinese lego hubs with motors using BLE"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleak>=2.0.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "reflex==0.8.20",
    "reflex-map>=0.2.3",
]


[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-playwright>=0.7.2",
    "sphinx>=8.2.3",
    "sphinx-rtd-dark-mode>=1.3.0",
    "sphinx-rtd-theme>=3.0.2",
]
lint = ["ruff"]
